--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                                         <!-- Navigation-bar Start -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-purple fixed-top ">
             <div class="container">
-              <a class="navbar-brand logo" href="#">Vedanti Sawarkar</a>
+              <a class="navbar-brand logo" href="#">Vedanti </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
